--- a/map.html
+++ b/map.html
@@ -1,77 +1,187 @@
 <!doctype html>
 <html lang="th">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Map.ABT.Dongtangnaw</title>
-  <link rel="icon" type="image/png" href="icon.png">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#2196f3">
+
+  <!-- PWA / Icon -->
+  <link rel="icon" type="image/png" href="icon.png" />
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#166534" />
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600;700&display=swap" rel="stylesheet" />
+
   <style>
-    body { margin:0; font-family: sans-serif; text-align: center; }
-    select { margin: 12px; padding: 6px; font-size: 16px; }
-    iframe { width: 100%; height: 600px; border: 0; }
+    :root{
+      --brand:#166534;
+      --brand-weak: rgba(0,100,0,.75);
+      --text-on-brand:#fff;
+      --card-bg: rgba(255,255,255,.88);
+      --pad: max(12px, env(safe-area-inset-left));
+      --padR: max(12px, env(safe-area-inset-right));
+      --padT: max(10px, env(safe-area-inset-top));
+      --padB: max(10px, env(safe-area-inset-bottom));
+    }
+
+    html, body { height:100%; }
+    body{
+      margin:0;
+      font-family:'Kanit', system-ui, sans-serif;
+      color:#111;
+      background-image:url('Background.png');
+      background-size:cover;
+      background-position:center;
+      background-attachment:fixed;
+      overflow:hidden; /* ไม่ให้หน้าเลื่อน */
+    }
+
+    header{
+      padding: calc(var(--padT) + 8px) var(--pad) 6px var(--pad);
+    }
+    header h1{
+      margin:0 auto;
+      display:inline-block;
+      padding:10px 20px;
+      font-size: clamp(22px, 3.4vw, 32px);
+      font-weight:700;
+      color:var(--text-on-brand);
+      background:var(--brand-weak);
+      border-radius:12px;
+      text-shadow:2px 2px 4px rgba(0,0,0,.55);
+    }
+
+    .picker-wrap{
+      display:flex; justify-content:center;
+      padding: 8px var(--pad) 6px var(--pad);
+    }
+    .picker{
+      display:inline-flex; gap:10px; align-items:center;
+      padding:10px 14px;
+      background:var(--card-bg);
+      border-radius:12px;
+      box-shadow:0 6px 18px rgba(0,0,0,.18);
+    }
+    .picker label{
+      font-weight:600;
+    }
+    select{
+      appearance:none;
+      padding:10px 14px;
+      font-size:16px;
+      border:0;
+      border-radius:10px;
+      outline:0;
+      background:#fff;
+      font-family:'Kanit', system-ui, sans-serif;
+    }
+
+    /* พื้นที่แผนที่จะเต็มความสูงที่เหลือ */
+    #mapFrame{
+      width:100%;
+      border:0;
+      display:block;
+      background:#fff;
+    }
+
+    /* ปุ่มติดตั้งแอป */
+    .install{
+      position: fixed;
+      left: var(--pad); bottom: calc(var(--padB) + 12px);
+      margin:0;
+      padding:10px 14px;
+      font-size:16px;
+      border:0; border-radius:10px;
+      background:#2196f3; color:#fff;
+      cursor:pointer;
+      box-shadow:0 4px 12px rgba(0,0,0,.18);
+      z-index: 10000;
+    }
+
+    /* มุมซ้าย/ขวาบน */
+    .top-left-icon{
+      position:fixed; top: calc(var(--padT) + 6px); left: var(--pad);
+      width: 136px; height:auto; z-index:9999;
+      filter: drop-shadow(0 2px 6px rgba(0,0,0,.25));
+    }
+    .top-right-icon{
+      position:fixed; top: calc(var(--padT) + 6px); right: var(--padR);
+      width: 120px; height:auto; z-index:9999;
+      filter: drop-shadow(0 2px 6px rgba(0,0,0,.25));
+    }
+
+    @media (max-width: 560px){
+      .top-left-icon{ width: 120px; }
+      .top-right-icon{ width: 86px; }
+    }
   </style>
 </head>
 <body>
+  <!-- โลโก้มุมซ้าย/ขวา (แก้ชื่อไฟล์ตามของจริงได้) -->
+  <img src="welcome-left.png" alt="welcome" class="top-left-icon" />
+  <img src="icon-right.png"  alt="icon"    class="top-right-icon" />
 
-  <h1>เลือกดูแผนที่ (Select a Map)</h1>
-  
+  <header>
+    <h1>เลือกดูแผนที่ (Select a Map)</h1>
+  </header>
 
-  <select id="mapSelect">
-    <option value="1">แผนที่ตำบลดงตะงาว (Map of Dong Ta Ngao Subdistrict)</option>
-    <option value="2">แผนเสาไฟฟ้าโซล่าเซลล์ (Solar Power Pole Plan)</option>
-	<option value="3">แผนที่วิกฤตน้ำท่วม (Flood Crisis Map)</option>
-  </select>
+  <div class="picker-wrap">
+    <div class="picker">
+      <label for="mapSelect">เลือกแผนที่</label>
+      <select id="mapSelect">
+        <option value="1">แผนที่ตำบลดงตะงาว (Map of Dong Ta Ngao Subdistrict)</option>
+        <option value="2">แผนที่เสาไฟฟ้าโซล่าเซลล์ (Solar Power Pole Plan)</option>
+        <option value="3">แผนที่วิกฤตน้ำท่วม (Flood Crisis Map)</option>
+      </select>
+    </div>
+  </div>
 
-  <!-- iframe สำหรับแสดงแผนที่ -->
-  <iframe id="mapFrame" src=""></iframe>
+  <iframe id="mapFrame" title="ABT Map"></iframe>
 
-  <!-- ปุ่มติดตั้งแอป -->
   <button id="installBtn" hidden class="install">ติดตั้งแอป</button>
 
   <script>
-    // ลิงก์แผนที่ของคุณ
-    // ลิงก์แผนที่ของคุณ
+    // ลิงก์ My Maps
     const maps = {
       1: "https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&ehbc=2E312F",
       2: "https://www.google.com/maps/d/embed?mid=1zy3WJ1VOzjpWf1gJQ36VGh1TaB9_7L4&ehbc=2E312F",
-	  3: "https://www.google.com/maps/d/embed?mid=1DS8CSBurVMUU-px6qC-HrWu8Wa5CCj0&ehbc=2E312F"
+      3: "https://www.google.com/maps/d/embed?mid=1DS8CSBurVMUU-px6qC-HrWu8Wa5CCj0&ehbc=2E312F"
     };
 
     const sel = document.getElementById('mapSelect');
     const frame = document.getElementById('mapFrame');
 
-    sel.addEventListener('change', () => {
-      frame.src = maps[sel.value];
-    });
+    function sizeMap(){
+      const headH = document.querySelector('header').offsetHeight;
+      const pickH = document.querySelector('.picker-wrap').offsetHeight;
+      const top = headH + pickH;
+      const vh = window.innerHeight;
+      const h = Math.max(120, vh - top);
+      frame.style.height = h + 'px';
+    }
+    window.addEventListener('resize', sizeMap);
+    window.addEventListener('load', sizeMap);
 
-    // ตั้งค่าเริ่มต้น
-    sel.value = "1";
-    frame.src = maps[1];
+    sel.addEventListener('change', () => { frame.src = maps[sel.value]; });
 
-    // PWA ติดตั้งแอป
+    // ค่าเริ่มต้น
+    sel.value = "1"; frame.src = maps[1];
+
+    // Service Worker for PWA
     if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => 
-        navigator.serviceWorker.register('./sw.js')
-      );
+      window.addEventListener('load', () => navigator.serviceWorker.register('./sw.js'));
     }
 
+    // Add to Home Screen
     let deferredPrompt;
     const btn = document.getElementById('installBtn');
-    window.addEventListener('beforeinstallprompt', e => {
-      e.preventDefault();
-      deferredPrompt = e;
-      btn.hidden = false;
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault(); deferredPrompt = e; btn.hidden = false;
     });
-
     btn.addEventListener('click', async () => {
       btn.hidden = true;
-      if (deferredPrompt) {
-        deferredPrompt.prompt();
-        await deferredPrompt.userChoice;
-        deferredPrompt = null;
-      }
+      if (deferredPrompt) { deferredPrompt.prompt(); await deferredPrompt.userChoice; deferredPrompt = null; }
     });
   </script>
 </body>
