--- a/map.html
+++ b/map.html
@@ -116,6 +116,7 @@
       transition: height .15s ease;
     }
     .ptr-indicator.show{ height: 50px; }
+	
   </style>
 </head>
 <body>
@@ -142,7 +143,7 @@
 
   <div class="ptr-indicator" id="ptrBar">ปล่อยเพื่อรีเฟรช…</div>
   <button class="refresh-btn" id="refreshBtn" title="รีเฟรช">⟲</button>
-
+  <button id="installBtn" hidden>ติดตั้งแอป</button>
   <script>
     // ===== จัดการการเลือกแผนที่ =====
     const selectEl = document.getElementById('mapSelect');
@@ -162,107 +163,64 @@
     // ===== PWA install button =====
     let deferredPrompt;
     window.addEventListener('beforeinstallprompt', (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-      document.getElementById('installBtn').hidden = false;
+      e.preventDefault(); deferredPrompt = e; installBtn.hidden = false;
     });
-
-    document.getElementById('installBtn').addEventListener('click', async () => {
+    installBtn.addEventListener('click', async () => {
       if (!deferredPrompt) return;
-      document.getElementById('installBtn').hidden = true;
+      installBtn.hidden = true;
       deferredPrompt.prompt();
-      const { outcome } = await deferredPrompt.userChoice;
+      await deferredPrompt.userChoice;
       deferredPrompt = null;
     });
+    window.addEventListener('appinstalled', () => { installBtn.hidden = true; });
 
-    window.addEventListener('appinstalled', () => {
-      deferredPrompt = null;
-      document.getElementById('installBtn').hidden = true;
-    });
-
-    // ===== รีเฟรช =====
+    /* ========== ปุ่มรีเฟรช & Pull-to-Refresh ========== */
     const refreshBtn = document.getElementById('refreshBtn');
-    const ptrBar     = document.getElementById('ptrBar');
-
-    function refreshApp() {
-      frameEl.src = frameEl.src;  // รีเฟรชเฉพาะ iframe
-      // หรือใช้ location.reload(); ถ้าอยากรีโหลดทั้งหน้า
+    const ptrBar = document.getElementById('ptrBar');
+    function refreshApp(){
+      // รีเฟรช iframe (เร็ว ไม่กระทบ SW)
+      const url = new URL(frameEl.src);
+      url.searchParams.set('v', Date.now()); // bust cache
+      frameEl.src = url.toString();
     }
-
     refreshBtn.addEventListener('click', refreshApp);
 
-    // ===== Pull-to-Refresh สำหรับมือถือ =====
-    let startY = 0, pulling = false;
-
-    window.addEventListener('touchstart', (e) => {
-      if (document.scrollingElement.scrollTop === 0) {
-        startY = e.touches[0].clientY;
-        pulling = true;
+    // PTR – ดึงลงเพื่อรีเฟรช (มือถือ)
+    let startY=0, pulling=false;
+    window.addEventListener('touchstart',e=>{
+      if (document.scrollingElement.scrollTop===0){
+        startY=e.touches[0].clientY; pulling=true;
       }
-    }, {passive:true});
-
-    window.addEventListener('touchmove', (e) => {
-      if (!pulling) return;
-      const dy = e.touches[0].clientY - startY;
-      if (dy > 60) {
-        ptrBar.classList.add('show');
-      } else {
-        ptrBar.classList.remove('show');
-      }
-    }, {passive:true});
-
-    window.addEventListener('touchend', () => {
-      if (!pulling) return;
-      pulling = false;
-      if (ptrBar.classList.contains('show')) {
-        ptrBar.classList.remove('show');
-        refreshApp();
-      }
+    },{passive:true});
+    window.addEventListener('touchmove',e=>{
+      if(!pulling) return;
+      const dy=e.touches[0].clientY-startY;
+      if(dy>60) ptrBar.classList.add('show'); else ptrBar.classList.remove('show');
+    },{passive:true});
+    window.addEventListener('touchend',()=>{
+      if(!pulling) return; pulling=false;
+      if(ptrBar.classList.contains('show')){ ptrBar.classList.remove('show'); refreshApp(); }
     });
 
-    // ถ้าใช้ Service Worker
-    if (navigator.serviceWorker?.controller) {
-      navigator.serviceWorker.addEventListener('controllerchange', () => location.reload());
+    /* ========== สมัคร/อัปเดต Service Worker ========== */
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', async () => {
+        try{
+          const reg = await navigator.serviceWorker.register('./sw.js'); // ใช้ทางสัมพัทธ์สำหรับ GitHub Pages
+          reg.update();                           // ขอเช็คอัปเดตทันที
+          reg.addEventListener('updatefound', ()=>{
+            const nw = reg.installing;
+            nw?.addEventListener('statechange', ()=>{
+              if (nw.state==='installed' && navigator.serviceWorker.controller){
+                nw.postMessage('SKIP_WAITING');   // ใช้เวอร์ชันใหม่เลย
+              }
+            });
+          });
+          navigator.serviceWorker.addEventListener('controllerchange', ()=> location.reload());
+          setInterval(()=>reg.update(), 15*60*1000);
+        }catch(e){ console.warn('SW register fail', e); }
+      });
     }
   </script>
-
-  <script>
-  // สมัคร SW + ตรวจอัปเดตอัตโนมัติ
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', async () => {
-      const reg = await navigator.serviceWorker.register('./sw.js');
-
-      // เช็กอัปเดตทันทีที่เข้า
-      reg.update();
-
-      // ถ้ามี SW ตัวใหม่มา (updatefound) — แจ้ง/รีโหลดอัตโนมัติ
-      reg.addEventListener('updatefound', () => {
-        const newWorker = reg.installing;
-        newWorker?.addEventListener('statechange', () => {
-          if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
-            // วิธีที่ 1: รีโหลดทันทีแบบอัตโนมัติ
-            newWorker.postMessage('SKIP_WAITING');
-
-            // เมื่อควบคุมโดย SW ใหม่แล้วจะเกิด controllerchange -> รีโหลดหน้า
-            navigator.serviceWorker.addEventListener('controllerchange', () => {
-              location.reload();
-            });
-
-            // วิธีที่ 2 (ถ้าอยากให้ผู้ใช้กดเอง): โชว์ปุ่ม “มีเวอร์ชันใหม่ – กดอัปเดต”
-            // แทนโค้ดด้านบน สร้างปุ่มแล้วกดส่ง SKIP_WAITING เมื่อผู้ใช้ยืนยัน
-          }
-        });
-      });
-
-      // รีเฟรชอัตโนมัติทันทีที่ SW ใหม่เข้าควบคุม
-      navigator.serviceWorker.addEventListener('controllerchange', () => {
-        location.reload();
-      });
-
-      // อัปเดตเป็นระยะ (เช่น ทุก 15 นาที)
-      setInterval(() => reg.update(), 15 * 60 * 1000);
-    });
-  }
-</script>
 </body>
 </html>
