--- a/map.html
+++ b/map.html
@@ -2,30 +2,41 @@
 <html lang="th">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Map.ABT.Dongtangnaw</title>
 
   <!-- ฟอนต์ -->
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <!-- PWA -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#2196f3">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <style>
+    /* กันเลื่อน + กันเด้ง */
     html, body {
       margin: 0;
+      padding: 0;
       height: 100%;
       font-family: 'Kanit', sans-serif;
-      overflow: hidden; /* ไม่ให้สกอลล์ */
-    }
-
-    body {
+      overflow: hidden;
+      overscroll-behavior: none;
       background: url('Background.png') no-repeat center center fixed;
       background-size: cover;
+    }
+
+    .app {
+      height: 100svh;    /* ใช้ svh/dvh กันปัญหาบาร์บน-ล่างมือถือ */
+      height: 100dvh;
       display: flex;
       flex-direction: column;
+      overflow: hidden;
     }
 
     header {
+      flex: 0 0 auto;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -36,25 +47,22 @@
       font-size: 20px;
       font-weight: 600;
       text-align: center;
-	  backdrop-filter: blue(3px);
-	  border-radius: 8px;
+      border-radius: 0 0 8px 8px;
+      text-shadow: 1px 1px 3px rgba(0,0,0,.5);
     }
-
-    header img {
-      height: 50px;
-    }
+    header img { height: 42px; }
 
     .controls {
+      flex: 0 0 auto;
       display: flex;
       gap: 8px;
       align-items: center;
       justify-content: center;
       padding: 10px;
       background: rgba(255, 255, 255, 0.85);
-      backdrop-filter: white(3px);
+      backdrop-filter: blur(3px);
       box-shadow: 0 1px 6px rgba(0,0,0,.12);
     }
-
     select {
       font: inherit;
       padding: 6px 10px;
@@ -63,63 +71,48 @@
       min-width: 240px;
     }
 
-    #map-container {
-      flex: 1;
-      margin: 10px;
-      border-radius: 12px;
+    #mapWrap {
+      flex: 1 1 auto;
+      min-height: 0;
+      display: flex;
       overflow: hidden;
+      border-radius: 12px 12px 0 0;
+      margin: 8px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.25);
       background: rgba(255,255,255,0.6);
-      display: flex;
     }
-
-    iframe {
+    #mapFrame {
+      flex: 1 1 auto;
       width: 100%;
       height: 100%;
-      border: none;
+      border: 0;
     }
 
-    #installBtn {
-      margin: 10px auto;
-      padding: 8px 16px;
-      font-family: inherit;
-      font-size: 16px;
-      background: #2196f3;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      display: block;
-    }
-
-    /* ปุ่มรีเฟรชลอย */
-    .refresh-btn{
+    /* ปุ่มลอยขวาล่าง */
+    .fab {
       position: fixed;
       right: 16px;
       bottom: 16px;
+      display: flex;
+      gap: 10px;
+      z-index: 9999;
+    }
+    .fab button {
       width: 48px; height: 48px;
-      border: 0; border-radius: 50%;
-      background: #2196f3; color: #fff;
-      display: grid; place-items: center;
-      box-shadow: 0 6px 16px rgba(0,0,0,.25);
-      cursor: pointer; z-index: 10000;
+      border: 0;
+      border-radius: 50%;
+      background: #2196f3;
+      color: #fff;
       font-size: 22px;
+      cursor: pointer;
+      display: grid;
+      place-items: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,.25);
     }
-
-    /* แถบสถานะดึงเพื่อรีเฟรช */
-    .ptr-indicator{
-      position: fixed; top: 0; left: 0; right: 0;
-      height: 0; overflow: hidden;
-      display: grid; place-items: center;
-      background: rgba(33,150,243,.9); color: #fff;
-      font-weight: 600; z-index: 10001;
-      transition: height .15s ease;
-    }
-    .ptr-indicator.show{ height: 50px; }
-	
   </style>
 </head>
 <body>
+<div class="app">
   <header>
     <img src="welcome.png" alt="Welcome" />
     เลือกดูแผนที่ (Select a Map)
@@ -135,92 +128,75 @@
     </select>
   </div>
 
-  <div id="map-container">
+  <div id="mapWrap">
     <iframe id="mapFrame"
       src="https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&ehbc=2E312F"
       allowfullscreen></iframe>
   </div>
+</div>
 
-  <div class="ptr-indicator" id="ptrBar">ปล่อยเพื่อรีเฟรช…</div>
-  <button class="refresh-btn" id="refreshBtn" title="รีเฟรช">⟲</button>
-  <button id="installBtn" hidden>ติดตั้งแอป</button>
-  <script>
-    // ===== จัดการการเลือกแผนที่ =====
-    const selectEl = document.getElementById('mapSelect');
-    const frameEl  = document.getElementById('mapFrame');
-    const saved = localStorage.getItem('abt_selected_map_value');
+<!-- ปุ่มลอย -->
+<div class="fab">
+  <button id="installBtn" title="ติดตั้ง">⬇</button>
+  <button id="refreshBtn" title="รีเฟรช">⟲</button>
+</div>
 
-    if (saved) {
-      selectEl.value = saved;
-      frameEl.src = saved;
-    }
+<script>
+  // ===== เลือกแผนที่ =====
+  const selectEl = document.getElementById('mapSelect');
+  const frameEl  = document.getElementById('mapFrame');
+  const saved = localStorage.getItem('abt_selected_map_value');
+  if (saved) { selectEl.value = saved; frameEl.src = saved; }
+  selectEl.addEventListener('change', () => {
+    frameEl.src = selectEl.value;
+    localStorage.setItem('abt_selected_map_value', selectEl.value);
+  });
 
-    selectEl.addEventListener('change', () => {
-      frameEl.src = selectEl.value;
-      localStorage.setItem('abt_selected_map_value', selectEl.value);
-    });
+  // ===== ปุ่มรีเฟรช =====
+  document.getElementById('refreshBtn').addEventListener('click', () => {
+    frameEl.src = frameEl.src;
+  });
 
-    // ===== PWA install button =====
-    let deferredPrompt;
-    window.addEventListener('beforeinstallprompt', (e) => {
-      e.preventDefault(); deferredPrompt = e; installBtn.hidden = false;
-    });
-    installBtn.addEventListener('click', async () => {
-      if (!deferredPrompt) return;
-      installBtn.hidden = true;
-      deferredPrompt.prompt();
-      await deferredPrompt.userChoice;
-      deferredPrompt = null;
-    });
-    window.addEventListener('appinstalled', () => { installBtn.hidden = true; });
+  // ===== PWA ติดตั้งแอป =====
+  const installBtn = document.getElementById('installBtn');
+  let deferredPrompt = null;
 
-    /* ========== ปุ่มรีเฟรช & Pull-to-Refresh ========== */
-    const refreshBtn = document.getElementById('refreshBtn');
-    const ptrBar = document.getElementById('ptrBar');
-    function refreshApp(){
-      // รีเฟรช iframe (เร็ว ไม่กระทบ SW)
-      const url = new URL(frameEl.src);
-      url.searchParams.set('v', Date.now()); // bust cache
-      frameEl.src = url.toString();
-    }
-    refreshBtn.addEventListener('click', refreshApp);
+  function isStandalone() {
+    return window.matchMedia('(display-mode: standalone)').matches || navigator.standalone;
+  }
+  function updateInstallButton() {
+    installBtn.hidden = isStandalone() || localStorage.getItem('abt_installed') === '1' || !deferredPrompt;
+  }
 
-    // PTR – ดึงลงเพื่อรีเฟรช (มือถือ)
-    let startY=0, pulling=false;
-    window.addEventListener('touchstart',e=>{
-      if (document.scrollingElement.scrollTop===0){
-        startY=e.touches[0].clientY; pulling=true;
-      }
-    },{passive:true});
-    window.addEventListener('touchmove',e=>{
-      if(!pulling) return;
-      const dy=e.touches[0].clientY-startY;
-      if(dy>60) ptrBar.classList.add('show'); else ptrBar.classList.remove('show');
-    },{passive:true});
-    window.addEventListener('touchend',()=>{
-      if(!pulling) return; pulling=false;
-      if(ptrBar.classList.contains('show')){ ptrBar.classList.remove('show'); refreshApp(); }
-    });
+  window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault();
+    deferredPrompt = e;
+    updateInstallButton();
+  });
 
-    /* ========== สมัคร/อัปเดต Service Worker ========== */
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', async () => {
-        try{
-          const reg = await navigator.serviceWorker.register('./sw.js'); // ใช้ทางสัมพัทธ์สำหรับ GitHub Pages
-          reg.update();                           // ขอเช็คอัปเดตทันที
-          reg.addEventListener('updatefound', ()=>{
-            const nw = reg.installing;
-            nw?.addEventListener('statechange', ()=>{
-              if (nw.state==='installed' && navigator.serviceWorker.controller){
-                nw.postMessage('SKIP_WAITING');   // ใช้เวอร์ชันใหม่เลย
-              }
-            });
-          });
-          navigator.serviceWorker.addEventListener('controllerchange', ()=> location.reload());
-          setInterval(()=>reg.update(), 15*60*1000);
-        }catch(e){ console.warn('SW register fail', e); }
-      });
-    }
-  </script>
+  installBtn.addEventListener('click', async () => {
+    if (!deferredPrompt) return;
+    installBtn.hidden = true;
+    deferredPrompt.prompt();
+    await deferredPrompt.userChoice;
+    deferredPrompt = null;
+    updateInstallButton();
+  });
+
+  window.addEventListener('appinstalled', () => {
+    localStorage.setItem('abt_installed', '1');
+    updateInstallButton();
+  });
+
+  document.addEventListener('DOMContentLoaded', updateInstallButton);
+
+  // ล็อคแนวตั้ง (บางเบราว์เซอร์ต้อง gesture ก่อน)
+  async function tryLockPortrait() {
+    if (!('orientation' in screen) || !screen.orientation.lock) return;
+    try { await screen.orientation.lock('portrait'); } catch(e) {}
+  }
+  if (isStandalone()) tryLockPortrait();
+  window.addEventListener('click', () => { if (isStandalone()) tryLockPortrait(); }, { once:true });
+</script>
 </body>
 </html>
